// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageMainActions/> renders correctly 1`] = `
<AppBox
  id="DebateStepPageMainActions"
>
  <ReactPlaceholder
    customPlaceholder={<DebateStepPageMainActionsPlaceholder />}
    ready={true}
  >
    <ForwardRef
      alignItems="center"
      direction="column"
      spacing={4}
    >
      <Tag
        icon="CLOCK"
        variant="yellow"
        variantType="badge"
      >
        <RemainingTime
          endAt="2030-03-10 00:00:00"
          noStyle={true}
        />
      </Tag>
      <Heading
        as="h2"
        color="gray.900"
        mb={2}
        textAlign="center"
      >
        Pour ou contre le LSD dans nos cantines
      </Heading>
      <Relay(Connect(ReduxForm))
        isAuthenticated={true}
        isMobile={false}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "timeRange": Object {
              "endAt": "2030-03-10 00:00:00",
              "startAt": "2030-02-10 00:00:00",
            },
            "timeless": false,
          }
        }
        title="Pour ou contre le LSD dans nos cantines"
      />
    </ForwardRef>
  </ReactPlaceholder>
</AppBox>
`;

exports[`<DebateStepPageMainActions/> renders correctly on mobile 1`] = `
<AppBox
  id="DebateStepPageMainActions"
>
  <ReactPlaceholder
    customPlaceholder={<DebateStepPageMainActionsPlaceholder />}
    ready={true}
  >
    <ForwardRef
      alignItems="center"
      direction="column"
      spacing={4}
    >
      <Tag
        icon="CLOCK"
        variant="yellow"
        variantType="badge"
      >
        <RemainingTime
          endAt="2030-03-10 00:00:00"
          noStyle={true}
        />
      </Tag>
      <Heading
        as="h2"
        color="gray.900"
        mb={2}
        textAlign="center"
      >
        Pour ou contre le LSD dans nos cantines
      </Heading>
      <Relay(Connect(ReduxForm))
        isAuthenticated={true}
        isMobile={true}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "timeRange": Object {
              "endAt": "2030-03-10 00:00:00",
              "startAt": "2030-02-10 00:00:00",
            },
            "timeless": false,
          }
        }
        title="Pour ou contre le LSD dans nos cantines"
      />
    </ForwardRef>
  </ReactPlaceholder>
</AppBox>
`;

exports[`<DebateStepPageMainActions/> renders correctly when step is timeless 1`] = `
<AppBox
  id="DebateStepPageMainActions"
>
  <ReactPlaceholder
    customPlaceholder={<DebateStepPageMainActionsPlaceholder />}
    ready={true}
  >
    <ForwardRef
      alignItems="center"
      direction="column"
      spacing={4}
    >
      <Heading
        as="h2"
        color="gray.900"
        mb={2}
        textAlign="center"
      >
        Pour ou contre le LSD dans nos cantines
      </Heading>
      <Relay(Connect(ReduxForm))
        isAuthenticated={true}
        isMobile={false}
        step={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "timeRange": Object {
              "endAt": null,
              "startAt": null,
            },
            "timeless": true,
          }
        }
        title="Pour ou contre le LSD dans nos cantines"
      />
    </ForwardRef>
  </ReactPlaceholder>
</AppBox>
`;
